0.9-15
- "+.section" renamed sectionAddStation()
- oceApprox() renamed oce.approx(), with an alias for compatibility 
- oce.grid() added
- "tdr" class renamed "logger"
- swCSTp() added
- swConductivity() now swThermalConductivity(); using Caldwell (1974).
- many sw*() functions handle eos="gsw"
- libary(gsw) replaces teos()
- curl() added
- handle new NOAA ascii topography dataset type
- mapGrid() added
- data(soi) moved to ocedata package
- lonlat2map() added
- map2lonlat() made more accurate
- permit proj4 style map projections
- landsat-7 (and possibly 4 and 5) support
- landsat decimation/plotting improvements
- drifterGrid() added
- mapDirectionField() added
- mapArrows() added
- read.index() added
- utm2lonlat() and lonlat2utm() added
- data(met) changed to time of Hurricane Juan

0.9-14
- fix compile-time warning
- colormap() added, and functionality added to imagep() and drawPalette()
- imagep() and drawPalette() new arg. 'axisPalette' (suggested C. Richards)
- drawPalette() has new args: plot, pos, levels, and cex.axis
- ctdDecimate() permits user-supplied method function
- data(nao) added; data(soi) updated, and names improved in latter
- landsat support added
- plotProfile() and plotTS() get new argument 'pt.bg'
- plot.section() grids the data if needed
- rename 'sealevelHalifax' dataset as 'sealevel'
- translate some axis names (Spanish, French, German and Mandarin)
- plotProfile() now has ytype="depth"
- mapImage() and friends now demand a map exists first
- runlm() added
- mapScalebar() added
- subset.topo() added
- read.topo() now handles GEBCO netcdf files
- decimate() now handles topo objects
- reverse oce.colorsGebco colours for water
- drawIsopycnals() and plotTS(): improve isopycnal labels
- ctdDecimate() handles new method 'unesco'
- coastline improvements (now 3 resolutions)
- webtide() improvements
- read.observatory() added
- read.ctd.itp() added
- mapImage() speeded up (60X in 1deg SST example)
- binApply1D() and binApply2D() added